--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -1,18 +1,26 @@
+server:
+  port: 80
 spring:
   application:
     name: mall-gateway
   cloud:
     gateway:
       routes:
-        - id: test_router
-          uri: http://www.baidu.com
+        - id: product_route
+          uri: lb://mall-product
           predicates:
-            - Query=url,baidu
+            - Path=/api/mallproduct/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/$\{segment}
 
-        - id: qq_router
-          uri: http://www.github.com
+        - id: admin_route
+          uri: lb://renren-fast
           predicates:
-            - Query=url,github
+            - Path=/api/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
+
+
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
